--- a/styles/globals.css
+++ b/styles/globals.css
@@ -383,3 +383,11 @@ width: 100%;
 .footer--terms__terms__mod{
   margin-right: 60px;
 }
+.about-title{
+  text-align: center;
+  font-size: 32px;
+}
+.row-marginer{
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
