--- a/styles/globals.css
+++ b/styles/globals.css
@@ -391,3 +391,11 @@ width: 100%;
   margin-top: 40px;
   margin-bottom: 40px;
 }
+.Nav__a{
+  color: white;
+  text-decoration: none;
+}
+a.nav-link{
+  color: #121927ac;
+  margin-left: 30px;
+}
