--- a/styles/globals.css
+++ b/styles/globals.css
@@ -399,3 +399,14 @@ a.nav-link{
   color: #121927ac;
   margin-left: 30px;
 }
+.about--text__hmod{
+  font-size: 24px;
+}
+.about--text__ptmod{
+  font-size: 14px;
+  max-width: 30%;
+}
+.about--text__ptmod2{
+  font-size: 14px;
+  max-width: 70%;
+}
