--- a/styles/globals.css
+++ b/styles/globals.css
@@ -397,16 +397,20 @@ width: 100%;
 }
 a.nav-link{
   color: #121927ac;
-  margin-left: 30px;
+  /* margin-left: 30px; */
 }
 .about--text__hmod{
   font-size: 24px;
 }
 .about--text__ptmod{
   font-size: 14px;
-  max-width: 30%;
+  /* max-width: 30%; */
 }
 .about--text__ptmod2{
   font-size: 14px;
-  max-width: 70%;
+  /* max-width: 70%; */
+}
+.about--text__ptmod__mod{
+  font-size: 14px;
+  /* max-width: 70%; */
 }
