--- a/styles/globals.css
+++ b/styles/globals.css
@@ -410,3 +410,30 @@ a.nav-link{
   font-size: 14px;
   max-width: 70%;
 }
+.header_btn{
+  width: 120px;
+  height: 30px;
+  border: 1px solid #121927;
+  background-color: transparent;
+  text-align: center;
+  padding: 0 !important;
+  color: black !important;
+}
+.Language__select{
+  background: transparent;
+  border: none;
+  font-size: 12px;
+}
+.input__main{
+  height: 40px;
+  border: 0.5px solid #00000064 !important;  
+  margin-bottom: 10px;
+  border-radius: 0px !important;
+}
+.btn-send{
+  width: 100%;
+  background-color: #000;
+  border: none;
+  color: white;
+  height: 40px;
+}
