--- a/styles/globals.css
+++ b/styles/globals.css
@@ -457,3 +457,30 @@ a.nav-link{
   color: white;
   font-size: 12px;
 }
+.textarea__input{
+  width: 100%;
+  height: 100px;
+  margin-bottom: 10px;
+}
+.contact__section{
+  margin-top: 120px;
+  margin-bottom: 120px;
+}
+.contact__info{
+  height: auto;
+  background: rgba(0, 0, 0, 0.04);
+  margin-top: -6px;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-top: 23px;
+  padding-bottom: 23px;
+}
+.contact__number h3{
+  font-size: 14px;
+  color: #000000;
+  opacity: 0.6;
+}
+.contact__number h5{
+  font-size: 14px;
+  color: #000000;
+}
