--- a/styles/globals.css
+++ b/styles/globals.css
@@ -305,12 +305,12 @@ width: 100%;
   font-size: 14px;
 }
 .partners{
-  display: flex;
+  /* display: flex;
   align-items: center;
   justify-content: center;
   padding: 0 10px;
   background-color: #121927;
-  height: 70px;
+  height: 70px; */
 }
 .partners h2{
   color: white;
@@ -528,4 +528,7 @@ a.nav-link{
 }
 .iframe_height{
   height: 1000px;
+}
+.custom__li{
+  list-style-image: url('../assets/liststyle.svg');
 }
