--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,24 +1,35 @@
-html,body {
-  height:100%;
+html,
+body {
+  height: 100%;
 }
-body{
-	margin:0;
-	padding:0;
-  background:#FFF;
+body {
+  margin: 0;
+  padding: 0;
+  background: #fff;
   -webkit-font-smoothing: antialiased;
 }
-a:hover{text-decoration: none;}
+a:hover {
+  text-decoration: none;
+}
 
-a{
+a {
   text-align: none;
-  
 }
 /* Globals type styling */
 
-h1,h2,h3,h4,h5,h6,p,label,.btn,a{
-	font-family:"Open Sans", sans-serif;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+label,
+.btn,
+a {
+  font-family: "Open Sans", sans-serif;
   color: #333;
-} 
+}
 
 /* NavBar */
 
@@ -26,51 +37,51 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
   margin-top: 30px;
 }
 
-.navbar{
-	margin-bottom: 0;
+.navbar {
+  margin-bottom: 0;
 }
-.navbar-brand{
-	font-size: 25px;
-	font-weight: bold;
-	font-family: "Open Sans", Helvetica, Arial, sans-serif;
-	font-weight: 600;
+.navbar-brand {
+  font-size: 25px;
+  font-weight: bold;
+  font-family: "Open Sans", Helvetica, Arial, sans-serif;
+  font-weight: 600;
 }
-.navbar-brand img{
-	width: auto;
-	max-height: 40px;
-	margin: -12px 5px 0 0;
+.navbar-brand img {
+  width: auto;
+  max-height: 40px;
+  margin: -12px 5px 0 0;
 }
-.navbar-brand{
-	padding: 15px 15px;
+.navbar-brand {
+  padding: 15px 15px;
 }
-.navbar .nav{
-	padding-top: 2px;
-	margin-right: -16px;
-	float:right;
+.navbar .nav {
+  padding-top: 2px;
+  margin-right: -16px;
+  float: right;
 }
-.nav > li{
-	float: left;
-	margin-top: 4px;
-	font-size: 16px;
+.nav > li {
+  float: left;
+  margin-top: 4px;
+  font-size: 16px;
 }
-.nav > li a:hover{
-	background:transparent;
+.nav > li a:hover {
+  background: transparent;
 }
-.navbar-toggle{
-	margin: 12px;
-	border: 0px;
+.navbar-toggle {
+  margin: 12px;
+  border: 0px;
 }
-.navbar-toggle:hover{
-	background:transparent!important;
+.navbar-toggle:hover {
+  background: transparent !important;
 }
-.navbar-toggle .icon-bar{
-	background-color: rgba(0,0,0,.5);
-	width: 26px;
+.navbar-toggle .icon-bar {
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 26px;
 }
 .navbar-collapse.in {
-overflow-y: visible;
-float: left;
-width: 100%;
+  overflow-y: visible;
+  float: left;
+  width: 100%;
 }
 .navbar-1 {
   float: right;
@@ -87,29 +98,28 @@ width: 100%;
   padding-right: 0px;
 }
 
-.site-navigation .nav > .active{
+.site-navigation .nav > .active {
   color: #333;
 }
-
 
 /* Carousel */
 
 .container {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 /* Carousel Styles */
 .carousel-indicators .active {
-    background-color: #fff;
+  background-color: #fff;
 }
 
 .carousel-inner img {
-    width: 100%;
-    max-height: 460px
+  width: 100%;
+  max-height: 460px;
 }
 
 .carousel-control {
-    width: 0;
+  width: 0;
 }
 
 .carousel-control.left,
@@ -129,9 +139,9 @@ width: 100%;
   margin-right: 15px;
 }
 
-.carousel-control .glyphicon-chevron-left, 
-.carousel-control .glyphicon-chevron-right, 
-.carousel-control .icon-prev, 
+.carousel-control .glyphicon-chevron-left,
+.carousel-control .glyphicon-chevron-right,
+.carousel-control .icon-prev,
 .carousel-control .icon-next {
   position: absolute;
   top: 45%;
@@ -151,62 +161,59 @@ width: 100%;
 
 .carousel-control.left span,
 .carousel-control.right span {
-  
 }
 
 .carousel-control.left span:hover,
 .carousel-control.right span:hover {
-  opacity: .7;
+  opacity: 0.7;
   filter: alpha(opacity=70);
 }
 
 /* Carousel Header Styles */
 .header-text {
-    position: absolute;
-    top: 30%;
-    left: 1.8%;
-    right: auto;
-    width: 96.66666666666666%;
-    color: #fff;
+  position: absolute;
+  top: 30%;
+  left: 1.8%;
+  right: auto;
+  width: 96.66666666666666%;
+  color: #fff;
 }
 
 .header-text h2 {
-    font-size: 40px;
-    font-weight: bold;
+  font-size: 40px;
+  font-weight: bold;
 }
 
 .header-text h2 span {
-    padding: 10px;
-    color: #fff;
+  padding: 10px;
+  color: #fff;
 }
 
 .btn-min-block {
-    min-width: 170px;
-    line-height: 26px;
+  min-width: 170px;
+  line-height: 26px;
 }
 
 .btn-theme {
-    color: #fff;
-    background-color: transparent;
-    border-color: #fff;
-    margin-right: 15px;
-    -webkit-border-radius: 0px;
-    -moz-border-radius: 0px;
-    border-radius: 0px;
+  color: #fff;
+  background-color: transparent;
+  border-color: #fff;
+  margin-right: 15px;
+  -webkit-border-radius: 0px;
+  -moz-border-radius: 0px;
+  border-radius: 0px;
 }
 
 .btn-theme:hover {
-    color: #fff;
-    background-color: transparent;
-    border-color: #fff;
+  color: #fff;
+  background-color: transparent;
+  border-color: #fff;
 }
-
-
 
 /* Posts */
 
 .post {
-  background-color: #FFF;
+  background-color: #fff;
   overflow: hidden;
 }
 .post .content {
@@ -216,12 +223,12 @@ width: 100%;
   position: relative;
 }
 
-.post .post-date  {
+.post .post-date {
   background-color: rgba(51, 51, 51, 0.58);
   position: absolute;
   bottom: 0px;
   width: 50%;
-  color: #FFF;
+  color: #fff;
   padding: 10px 15px;
 }
 .news .post-img-content {
@@ -241,70 +248,68 @@ width: 100%;
   position: relative;
 }
 
-
-
-
 /* Mobile adjustments */
 
-@media (max-width: 768px)
-{
-    .bloc{
-        text-align: center;
-        -webkit-background-size: auto 200%;
-        -moz-background-size: auto 200%;
-        -o-background-size: auto 200%;
-        background-size: auto 200%;
-    }
-    .navbar .nav{
-        padding-top: 0;
-        border-top:1px solid rgba(0,0,0,.2);
-        float:none!important;
-    }
-    .nav > li{
-        margin-top: 0;
-        border-bottom:1px solid rgba(0,0,0,.1);
-        background:rgba(0,0,0,.05);
-        text-align: left;
-        width:100%;
-    }
-    .nav > li:hover{
-        background:rgba(0,0,0,.08);
-    }
-    .navbar-collapse{
-        -webkit-box-shadow: none;
-        box-shadow: none;
-    }
-    .btn.pull-left, .btn.pull-right{
-       float:none!important; 
-    }
-    .bloc-xl,.bloc-lg{
-        padding: 40px 0;
-    }
-    .a-block{
-        text-align: center;
-    }
+@media (max-width: 768px) {
+  .bloc {
+    text-align: center;
+    -webkit-background-size: auto 200%;
+    -moz-background-size: auto 200%;
+    -o-background-size: auto 200%;
+    background-size: auto 200%;
+  }
+  .navbar .nav {
+    padding-top: 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.2);
+    float: none !important;
+  }
+  .nav > li {
+    margin-top: 0;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    background: rgba(0, 0, 0, 0.05);
+    text-align: left;
+    width: 100%;
+  }
+  .nav > li:hover {
+    background: rgba(0, 0, 0, 0.08);
+  }
+  .navbar-collapse {
+    -webkit-box-shadow: none;
+    box-shadow: none;
+  }
+  .btn.pull-left,
+  .btn.pull-right {
+    float: none !important;
+  }
+  .bloc-xl,
+  .bloc-lg {
+    padding: 40px 0;
+  }
+  .a-block {
+    text-align: center;
+  }
 }
-.navbar-nav{
+.navbar-nav {
   flex-direction: row !important;
 }
-.nav-item{
+.nav-item {
   margin-left: 15px;
 }
-.section1-title{
+.section1-title {
   font-size: 54px;
 }
-.section1-subtitle{
+.section1-subtitle {
   font-size: 14px;
   opacity: 0.4;
 }
-.section1-form-text{
+.section1-form-text {
   font-size: 14px;
   opacity: 0.6;
 }
-.section-1-form-subtext{
+.section-1-form-subtext {
   font-size: 14px;
 }
-.partners{
+.partners {
   /* display: flex;
   align-items: center;
   justify-content: center;
@@ -312,25 +317,28 @@ width: 100%;
   background-color: #121927;
   height: 70px; */
 }
-.partners h2{
+.partners h2 {
   color: white;
 }
-.footer-outside{
+.footer-outside {
   background-color: #121927;
-
 }
-.footer-logo{
+.footer-logo {
   display: flex;
   align-items: center;
   justify-content: center;
   margin-top: 20px;
 }
-.languages{
+.languages {
   font-size: 14px;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
   list-style: none;
+  opacity: 0.6;
+}
+.languages:active {
+  opacity: 1;
 }
 .languages p {
   color: rgba(0, 0, 0, 0.4);
@@ -338,7 +346,7 @@ width: 100%;
 .languages .active {
   color: rgb(0, 0, 0);
 }
-.footer-info{
+.footer-info {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -347,17 +355,17 @@ width: 100%;
   /* there is something overwriting this */
   margin-top: 30px !important;
 }
-.footer-info-title{
-  color: #FFF;
+.footer-info-title {
+  color: #fff;
   opacity: 0.6;
   margin-bottom: 24px;
 }
-.footer-info-ul{
+.footer-info-ul {
   transform: translateX(30%);
   margin-top: 30px;
 }
 .footer-info-ul li {
-  color: #FFF;
+  color: #fff;
   list-style: none;
   margin-bottom: 14px;
 }
@@ -370,62 +378,61 @@ width: 100%;
   list-style: none;
   margin-bottom: 14px;
 }
-.footer-info-title-white{
+.footer-info-title-white {
   color: black;
 }
-.partners-container{
+.partners-container {
   margin-bottom: 60px;
 }
-.footer-outside{
+.footer-outside {
   margin-top: 60px;
 }
-.footer-container{
+.footer-container {
   padding-top: 20px;
 }
-.footer-terms{
+.footer-terms {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding-top: 10px;
-  
 }
 .footer-terms p {
   color: rgba(255, 255, 255, 0.6);
 }
-.footer--terms__mod{
+.footer--terms__mod {
   margin-left: 120px;
 }
-.footer--terms__terms__mod{
+.footer--terms__terms__mod {
   margin-right: 60px;
 }
-.about-title{
+.about-title {
   text-align: center;
   font-size: 32px;
 }
-.row-marginer{
+.row-marginer {
   margin-top: 40px;
   margin-bottom: 40px;
 }
-.Nav__a{
+.Nav__a {
   color: white;
   text-decoration: none;
 }
-a.nav-link{
+a.nav-link {
   color: #121927ac;
   /* margin-left: 30px; */
 }
-.about--text__hmod{
+.about--text__hmod {
   font-size: 24px;
 }
-.about--text__ptmod{
+.about--text__ptmod {
   font-size: 14px;
   /* max-width: 30%; */
 }
-.about--text__ptmod2{
+.about--text__ptmod2 {
   font-size: 14px;
   max-width: 70%;
 }
-.header_btn{
+.header_btn {
   width: 120px;
   height: 30px;
   border: 1px solid #121927;
@@ -434,18 +441,18 @@ a.nav-link{
   padding: 0 !important;
   color: black !important;
 }
-.Language__select{
+.Language__select {
   background: transparent;
   border: none;
   font-size: 12px;
 }
-.input__main{
+.input__main {
   height: 40px;
-  border: 0.5px solid #00000064 !important;  
+  border: 0.5px solid #00000064 !important;
   margin-bottom: 10px;
   border-radius: 0px !important;
 }
-.btn-send{
+.btn-send {
   width: 100%;
   background-color: #000;
   border: none;
@@ -453,52 +460,52 @@ a.nav-link{
   height: 40px;
   /* max-width: 70%; */
 }
-.about--text__ptmod__mod{
+.about--text__ptmod__mod {
   font-size: 14px;
   /* max-width: 70%; */
 }
-.form-check{
+.form-check {
   margin-top: 20px;
 }
-.form-check-label{
+.form-check-label {
   font-size: 14px;
 }
-#contact-form{
+#contact-form {
   margin-top: 20px;
 }
-.btn-send{
+.btn-send {
   margin-top: 20px;
 }
 
-.container-marginer{
+.container-marginer {
   margin-top: 60px !important;
   margin-bottom: 60px !important;
 }
-.image__box{
+.image__box {
   background-image: url("../assets/aboutbannerimg.svg");
   height: 300px;
 }
-.blog-image__content{
+.blog-image__content {
   padding: 30px;
 }
-.blog-image__content h2{
+.blog-image__content h2 {
   color: white;
   font-size: 18px;
 }
-.blog-image__content p{
+.blog-image__content p {
   color: white;
   font-size: 12px;
 }
-.textarea__input{
+.textarea__input {
   width: 100%;
   height: 100px;
   margin-bottom: 10px;
 }
-.contact__section{
+.contact__section {
   margin-top: 120px;
   margin-bottom: 120px;
 }
-.contact__info{
+.contact__info {
   height: auto;
   background: rgba(0, 0, 0, 0.04);
   margin-top: -6px;
@@ -507,28 +514,46 @@ a.nav-link{
   padding-top: 23px;
   padding-bottom: 23px;
 }
-.contact__number h3{
+.contact__number h3 {
   font-size: 14px;
   color: #000000;
   opacity: 0.6;
 }
-.contact__number h5{
+.contact__number h5 {
   font-size: 14px;
   color: #000000;
 }
-.Nav__a{
+.Nav__a {
   color: #000 !important;
 }
-.footer-terms-white{
+.footer-terms-white {
   color: black;
 }
-.footer-splitter{
+.footer-splitter {
   border-top: 1px solid #00000040;
   padding-top: 10px;
 }
-.iframe_height{
+.iframe_height {
   height: 1000px;
 }
-.custom__li{
-  list-style-image: url('../assets/liststyle.svg');
+.custom__li {
+  list-style-image: url("../assets/liststyle.svg");
+}
+.copyright {
+  font-size: 14px;
+  max-width: 70%;
+}
+.policy {
+  font-size: 14px;
+  opacity: 0.4;
+}
+.terms-condition {
+  float: right;
+}
+.box {
+  display: flex;
+  flex-wrap: wrap;
+}
+.box > * {
+  flex: 1 1 100px;
 }
