--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,7 @@ body {
   padding: 0;
   background: #fff;
   -webkit-font-smoothing: antialiased;
+  overflow-x: hidden;
 }
 a:hover {
   text-decoration: none;
@@ -22,6 +23,11 @@ a {
 
 .App {
   height: 570px;
+  width: 140%;
+}
+.custom_row{
+  display: flex;
+  justify-content: center;
 }
 
 .slide img {
@@ -30,7 +36,7 @@ a {
 }
 
 .slide {
-  transform: scale(0.5);
+  transform: scale(0.9);
   transition: transform 300ms;
   opacity: 0.3;
 }
@@ -40,7 +46,7 @@ a {
 
 .activeSlide{
   width: 900px !important;
-  margin-left: -20vh;
+  margin-left: -15vh;
   transform: scale(1.2);
   opacity: 1;
 }
