--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,9 +8,8 @@ body {
   background: #fff;
   -webkit-font-smoothing: antialiased;
   overflow-x: hidden;
-  background-image: url('../assets/backgound.svg');
+  background-image: url("../assets/backgound.svg");
   background-repeat: no-repeat;
-
 }
 a:hover {
   text-decoration: none;
@@ -29,7 +28,7 @@ a {
   width: 140%;
   margin-left: 15%;
 }
-.custom_row{
+.custom_row {
   display: flex;
   justify-content: center;
 }
@@ -44,17 +43,17 @@ a {
   transition: transform 300ms;
   opacity: 0.3;
 }
-.slide .test{
+.slide .test {
   display: none;
 }
 
-.activeSlide{
+.activeSlide {
   width: 900px !important;
   margin-left: -15vh;
   transform: scale(1.2);
   opacity: 1;
 }
-.activeSlide .test{
+.activeSlide .test {
   display: block;
 }
 .arrow {
@@ -627,10 +626,17 @@ a.nav-link {
   color: #000;
   text-decoration: none;
 }
-.cover{
+.cover {
   height: 300px;
   background-image: url("../assets/cover.svg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: bottom;
+}
+.Calculator {
+  height: 548px;
+  left: 693px;
+  top: 1321px;
+
+  background: #f5f5f5;
 }
