--- a/styles/globals.css
+++ b/styles/globals.css
@@ -691,3 +691,9 @@ a.nav-link {
 .sixty-row:last-child {
   margin-bottom: 60px !important;
 }
+.rooom-select-img {
+  margin-top: 10%;
+}
+.room--image--model {
+  margin-top: 20%;
+}
