test 3d model update

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -697,3 +697,10 @@ a.nav-link {
 .room--image--model {
   margin-top: 20%;
 }
+.test_test{
+  width: 500px;
+}
+.col_height{
+  height: 500px;
+  width: 100%;
+}
