--- a/styles/globals.css
+++ b/styles/globals.css
@@ -730,3 +730,17 @@ a.nav-link {
 .projects--legend__bot {
   margin-top: 30px;
 }
+.projects-floor-title {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 42px;
+  line-height: 50px;
+}
+.projects-floor-yard {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+
+  color: #121927;
+}
