--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,7 +10,7 @@ body {
   overflow-x: hidden;
   background-image: url("../assets/backgound.svg");
   background-repeat: no-repeat;
-  font-family: rockridge;
+  font-family: "rockridge";
 }
 a:hover {
   text-decoration: none;
@@ -26,7 +26,7 @@ a {
 
 @font-face {
   font-family: 'rockridge';
-  src: url('../Fonts/rockridge-webfont.woff');
+  src: url('Fonts/rockridge-webfont.woff');
   font-weight: 400;
   font-style: normal;}
 
