--- a/styles/globals.css
+++ b/styles/globals.css
@@ -74,7 +74,6 @@ a {
   display: block;
 }
 .arrow {
-  background-color: #fff;
   position: absolute;
   cursor: pointer;
   z-index: 10;
@@ -108,7 +107,7 @@ p,
 label,
 .btn,
 a {
-  font-family: "Open Sans", sans-serif;
+  font-family: "rockridge";
   color: #333;
 }
 
@@ -463,6 +462,7 @@ a {
   color: black;
 }
 .partners-container {
+  margin-top: 60px;
   margin-bottom: 60px;
 }
 .footer-outside {
@@ -556,7 +556,7 @@ a.nav-link {
   margin-top: 20px;
 }
 .form-check-label {
-  font-size: 14px;
+  font-size: 11px;
 }
 #contact-form {
   margin-top: 20px;
@@ -765,4 +765,35 @@ a.nav-link {
 }
 .projects-title-distance {
   margin: 120px 0;
+}
+.mb-60{
+  margin-bottom: 60px;
+}
+.padding-0{
+  padding: 0 !important;
+}
+.mt-60{
+  padding-top: 60px;
+}
+.mt-40{
+  padding-top: 40px;
+}
+.mt-20{
+  padding-top: 20px;
+}
+.mt-10{
+  padding-top: 10px;
+}
+
+p{
+  font-size: 12px;
+}
+h1{
+  font-size: 42;
+}
+h2{
+  font-size: 24px;
+}
+.nav-link{
+  font-size: 12px;
 }
