--- a/styles/globals.css
+++ b/styles/globals.css
@@ -543,7 +543,7 @@ a.nav-link {
   background-color: #fff !important;
   border: 1px solid black !important;
   color: #000 !important;
-  border-radius: 0px !important;
+  border-radius: 0 !important;
   height: 40px;
   margin: 0 !important;
   /* max-width: 70%; */
@@ -579,8 +579,12 @@ a.nav-link {
 .blog-image__content h2 {
   color: white;
   font-size: 18px;
+  margin-bottom: 10px;
+  text-transform: capitalize;
 }
 .blog-image__content p {
+  /* ar mushaobs */
+  margin-bottom: 10px;
   color: white;
   font-size: 12px;
 }
@@ -661,11 +665,14 @@ a.nav-link {
   background: #f5f5f5;
 }
 .container-borderer {
-  border-top: 1px solid black;
+  border-left: 1px solid rgba(0, 0, 0, 0.2);
+  border-top: 1px solid rgba(0, 0, 0, 0.2);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  padding: 30px;
 }
-.container-borderer:last-child {
+/* .container-borderer:last-child {
   border-bottom: 1px solid black;
-}
+} */
 /* .project--location__mod {
   max-width: 50%;
 } */
@@ -811,4 +818,43 @@ h2 {
 }
 .full_width {
   object-fit: cover;
+}
+
+.test1313 {
+  border: 1px solid rgba(0, 0, 0, 0.2);
+}
+projects--texts__create {
+  margin: 0;
+}
+.btn-test {
+  width: 90%;
+  padding: 6px;
+}
+.projects--floor-about-text {
+  margin-top: 30px;
+  margin-bottom: 60px;
+}
+.projects-floor-first-one {
+  margin-top: 30px;
+  margin-bottom: 10px;
+}
+.blog__1 {
+}
+.blog__2 {
+  /* background-image: url("../assets/apart\ assets/Rectangle42.png"); */
+}
+.blog__3 {
+  background-image: url("../assets/aboutbannerimg.svg");
+}
+.blog__4 {
+  background-image: url("../assets/aboutbannerimg.svg");
+}
+.blog__5 {
+  background-image: url("../assets/aboutbannerimg.svg");
+}
+.blog__6 {
+  background-image: url("../assets/aboutbannerimg.svg");
+}
+.blog-single-blog {
+  margin-bottom: 20px;
 }
