--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,7 @@ body {
   background: #fff;
   -webkit-font-smoothing: antialiased;
   overflow-x: hidden;
-  background-image: url("../assets/backgound.svg");
+  /* background-image: url("../assets/backgound.svg"); */
   background-repeat: no-repeat;
   font-family: "rockridge";
 }
@@ -665,10 +665,8 @@ a.nav-link {
   background: #f5f5f5;
 }
 .container-borderer {
-  border-left: 1px solid rgba(0, 0, 0, 0.2);
-  border-top: 1px solid rgba(0, 0, 0, 0.2);
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-  padding: 30px;
+  /* padding: 30px; */
+  margin: 0;
 }
 /* .container-borderer:last-child {
   border-bottom: 1px solid black;
@@ -857,4 +855,18 @@ projects--texts__create {
 }
 .blog-single-blog {
   margin-bottom: 20px;
+}
+.line-test {
+  position: relative;
+}
+.line-creator {
+  border-left: 1px solid rgba(0, 0, 0, 0.2);
+  height: 181%;
+  position: absolute;
+  margin-left: 30%;
+  top: 38.7%;
+}
+.projects-margin-fixer {
+  padding-bottom: 30px;
+  padding-top: 30px;
 }
