--- a/styles/globals.css
+++ b/styles/globals.css
@@ -56,8 +56,8 @@ a {
 }
 
 .activeSlide {
-  /* width: 900px !important;
-  margin-left: -15vh; */
+  width: 900px !important;
+  margin-left: -15vh;
   transform: scale(1.2);
   opacity: 1;
 }
