--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1148,3 +1148,6 @@ h2 {
 .navbar-light .navbar-nav .nav-link:focus {
   color: white;
 }
+.border__right{
+  border-right: 1px solid rgba(0, 0, 0, 0.2);
+}
