--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1148,6 +1148,12 @@ h2 {
 .navbar-light .navbar-nav .nav-link:focus {
   color: white;
 }
-.border__right{
-  border-right: 1px solid rgba(0, 0, 0, 0.2);
+.border__left {
+  border-left: 1px solid rgba(0, 0, 0, 0.2);
+}
+.dark-mode .border__left {
+  border-left: 1px solid rgba(255, 255, 255, 0.2);
+}
+.dark-mode .test1313 {
+  border: 1px solid rgba(255, 255, 255, 0.2);
 }
