--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1158,3 +1158,6 @@ h2 {
 .dark-mode .test1313 {
   border: 1px solid rgba(255, 255, 255, 0.2);
 }
+.carousel-indicators{
+  display: none !important;
+}
