--- a/styles/globals.css
+++ b/styles/globals.css
@@ -857,6 +857,7 @@ h2 {
 }
 .btn-test {
   padding: 6px;
+  width: 100%;
 }
 .projects--floor-about-text {
   margin-top: 30px;
@@ -1098,6 +1099,7 @@ h2 {
 
 .form-select {
   font-size: 14px !important;
+  margin-top: 1rem;
 }
 .dark-mode {
   background-color: #121927;
@@ -1385,6 +1387,7 @@ flickity-enabled {
 }
 .goback {
   font-size: 16px;
+  margin-top: 120px !important;
 }
 .single-blog-texts p {
   font-size: 16px;
@@ -1425,3 +1428,7 @@ flickity-enabled {
 /* .projects-floor-selector-hr {
   border-top: 1px solid #121927;
 } */
+
+.projects-floor-goback {
+  margin-top: 120px !important;
+}
