--- a/styles/globals.css
+++ b/styles/globals.css
@@ -563,7 +563,7 @@ a.nav-link {
   margin-bottom: 60px !important;
 }
 .image__box {
-  background-image: url("../assets/aboutbannerimg.svg");
+  background-image: url("../pages/assets/aboutbannerimg.svg");
   height: 300px;
 }
 .blog-image__content {
@@ -617,7 +617,7 @@ a.nav-link {
   height: 1000px;
 }
 .custom__li {
-  list-style-image: url("../assets/liststyle.svg");
+  list-style-image: url("../pages/assets/liststyle.svg");
 }
 .copyright {
   font-size: 14px;
@@ -645,7 +645,7 @@ a.nav-link {
 }
 .cover {
   height: 300px;
-  background-image: url("../assets/cover.svg");
+  background-image: url("../pages/assets/cover.svg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: bottom;
@@ -839,7 +839,7 @@ h2 {
 /* USE OF IMPORTANT  */
 
 .custom_ol {
-  list-style: url("../assets/line.svg") !important;
+  list-style: url("../pages/assets/line.svg") !important;
 }
 .full_width {
   object-fit: cover;
@@ -868,22 +868,22 @@ h2 {
   margin-bottom: 10px;
 }
 .blog__1 {
-  background-image: url("../assets/apart assets/blog/blog1.png");
+  background-image: url("../pages/assets/apart assets/blog/blog1.png");
 }
 .blog__2 {
-  background-image: url("../assets/apart assets/blog/blog2.png");
+  background-image: url("../pages/assets/apart assets/blog/blog2.png");
 }
 .blog__3 {
-  background-image: url("../assets/apart assets/blog/blog3.png");
+  background-image: url("../pages/assets/apart assets/blog/blog3.png");
 }
 .blog__4 {
-  background-image: url("../assets/apart assets/blog/blog4.png");
+  background-image: url("../pages/assets/apart assets/blog/blog4.png");
 }
 .blog__5 {
-  background-image: url("../assets/apart assets/blog/blog5.png");
+  background-image: url("../pages/assets/apart assets/blog/blog5.png");
 }
 .blog__6 {
-  background-image: url("../assets/apart assets/blog/blog6.png");
+  background-image: url("../pages/assets/apart assets/blog/blog6.png");
 }
 .blog-single-blog {
   margin-bottom: 20px;
@@ -1083,7 +1083,7 @@ h2 {
 }
 
 .form-switch .form-check-input {
-  background-image: url("../assets/sun.svg") !important;
+  background-image: url("../pages/assets/sun.svg") !important;
   border-radius: 0em !important;
   width: 60px !important;
   height: 30px;
@@ -1092,7 +1092,7 @@ h2 {
 .form-switch .form-check-input:checked {
   background-color: #121927;
   border: 1px solid #32343982;
-  background-image: url("../assets/moon.svg") !important;
+  background-image: url("../pages/assets/moon.svg") !important;
   background-size: 30%;
   background-position-x: -5%;
 }
